add game objects & character actions

--- a/console/console.vcxproj
+++ b/console/console.vcxproj
@@ -212,13 +212,20 @@
     <ClInclude Include="..\..\..\..\..\Libraries\guisan\include\guisan\widgets\textfield.hpp" />
     <ClInclude Include="..\..\..\..\..\Libraries\guisan\include\guisan\widgets\window.hpp" />
     <ClInclude Include="..\..\..\..\..\Libraries\guisan\include\guisan\x.hpp" />
+    <ClInclude Include="actions\action.h" />
+    <ClInclude Include="actions\actions.h" />
+    <ClInclude Include="actions\move.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="game_base.h" />
+    <ClInclude Include="objects\animated_object.h" />
+    <ClInclude Include="objects\character.h" />
+    <ClInclude Include="objects\object.h" />
     <ClInclude Include="state.h" />
     <ClInclude Include="[libs]\game\common.h" />
     <ClInclude Include="[libs]\game\data.h" />
     <ClInclude Include="[libs]\game\data_path.h" />
+    <ClInclude Include="[libs]\game\point.h" />
     <ClInclude Include="[libs]\game\sdl\sdl_log.h" />
     <ClInclude Include="[libs]\game\sdl\sdl_ptr.h" />
     <ClInclude Include="[libs]\game\sdl\sdl_utils.h" />
@@ -273,13 +280,19 @@
     <ClCompile Include="..\..\..\..\..\Libraries\guisan\src\widgets\textbox.cpp" />
     <ClCompile Include="..\..\..\..\..\Libraries\guisan\src\widgets\textfield.cpp" />
     <ClCompile Include="..\..\..\..\..\Libraries\guisan\src\widgets\window.cpp" />
+    <ClCompile Include="actions\action.cpp" />
+    <ClCompile Include="actions\move.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="game_base.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="objects\animated_object.cpp" />
+    <ClCompile Include="objects\character.cpp" />
+    <ClCompile Include="objects\object.cpp" />
     <ClCompile Include="state.cpp" />
     <ClCompile Include="[libs]\game\data.cpp" />
     <ClCompile Include="[libs]\game\data_path.cpp" />
+    <ClCompile Include="[libs]\game\point.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
